feat: added login API, jwt token generator and validator
