# auth/cmd/api/auth/entity.go
@@ -3,5 +3,10 @@ package auth
 type registerUserPayload struct {
 	Username string `json:"username" validate:"required,max=100"`
 	Email    string `json:"email" validate:"required,email,max=255"`
-	Password string `json:"password" validate:"required,min=6,max=13"`
+	Password string `json:"password" validate:"required,min=6,max=20"`
+}
+
+type loginUserPayload struct {
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=6,max=20"`
 }
